panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_operand_for_postincrement.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_operand_for_postincrement.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_operand_for_postincrement.c"
   (function-definition
      f~0 `fn() -> void`
      (compound-statement))
   (function-definition
      returns_int~2 `fn() -> int`
      (compound-statement
         (return 42)))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (expression (post-increment (call (name f~0 `fn() -> void`))))
         (expression (post-increment (call (name returns_int~2 `fn() -> int`)))))))

----- stderr -----
