panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_operand_for_unary_operator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_operand_for_unary_operator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_operand_for_unary_operator.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration p~2 `ptr<int>` ∅)
         (expression (plus (name p~2 `ptr<int>`)))
         (expression (plus (name main~0 `fn() -> int`)))
         (expression (negate (name p~2 `ptr<int>`)))
         (expression (negate (name main~0 `fn() -> int`)))
         (expression (compl (name p~2 `ptr<int>`)))
         (expression (compl (name main~0 `fn() -> int`))))))

----- stderr -----
