panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__test_error_invalid_ptrdiff.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/test_error_invalid_ptrdiff.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/test_error_invalid_ptrdiff.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration array~2 `ptr<int>` ∅)
         (declaration p~3 `ptr<char>` ∅)
         (expression (subtract (name array~2 `ptr<int>`) (name p~3 `ptr<char>`))))))

----- stderr -----
